--- a/Task-App/app.json
+++ b/Task-App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Task-App",
-    "slug": "Task-App",
+    "name": "app-ing",
+    "slug": "app-ing",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2980B9"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,7 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#2980B9"
       }
     },
     "web": {
@@ -28,3 +28,4 @@
     }
   }
 }
+
