--- a/Task-App/package.json
+++ b/Task-App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-app",
+  "name": "app-ing",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,12 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.9",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/native": "^6.1.6",
+    "expo": "~48.0.10",
+    "expo-font": "^11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.71.4",
-    "react-native-web": "~0.18.11"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
