--- a/Task-App/package.json
+++ b/Task-App/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.10",
     "expo-font": "^11.1.1",
     "expo-linear-gradient": "~12.1.2",
